@@ -33,6 +33,8 @@ import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.Streams;
 import io.airbyte.cdk.integrations.base.AirbyteExceptionHandler;
 import io.airbyte.cdk.integrations.base.JavaBaseConstants;
+import io.airbyte.cdk.integrations.util.ConnectorExceptionUtil;
+import io.airbyte.commons.exceptions.ConfigErrorException;
 import io.airbyte.integrations.base.destination.typing_deduping.AlterTableReport;
 import io.airbyte.integrations.base.destination.typing_deduping.ColumnId;
 import io.airbyte.integrations.base.destination.typing_deduping.DestinationHandler;
@@ -42,8 +44,8 @@ import io.airbyte.integrations.base.destination.typing_deduping.Sql;
 import io.airbyte.integrations.base.destination.typing_deduping.StreamConfig;
 import io.airbyte.integrations.base.destination.typing_deduping.StreamId;
 import io.airbyte.integrations.base.destination.typing_deduping.TableNotMigratedException;
-import io.airbyte.integrations.base.destination.typing_deduping.migrators.MinimumDestinationState;
-import io.airbyte.integrations.base.destination.typing_deduping.migrators.MinimumDestinationState.Impl;
+import io.airbyte.integrations.destination.bigquery.BigQueryUtils;
+import io.airbyte.integrations.destination.bigquery.migrators.BigQueryDestinationState;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -58,11 +60,11 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.text.StringSubstitutor;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-// TODO this stuff almost definitely exists somewhere else in our codebase.
-public class BigQueryDestinationHandler implements DestinationHandler<MinimumDestinationState.Impl> {
+public class BigQueryDestinationHandler implements DestinationHandler<BigQueryDestinationState> {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(BigQueryDestinationHandler.class);
 
@@ -75,16 +77,16 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
   }
 
   public Optional<TableDefinition> findExistingTable(final StreamId id) {
-    final Table table = bq.getTable(id.finalNamespace(), id.finalName());
+    final Table table = bq.getTable(id.getFinalNamespace(), id.getFinalName());
     return Optional.ofNullable(table).map(Table::getDefinition);
   }
 
   public boolean isFinalTableEmpty(final StreamId id) {
-    return BigInteger.ZERO.equals(bq.getTable(TableId.of(id.finalNamespace(), id.finalName())).getNumRows());
+    return BigInteger.ZERO.equals(bq.getTable(TableId.of(id.getFinalNamespace(), id.getFinalName())).getNumRows());
   }
 
   public InitialRawTableStatus getInitialRawTableState(final StreamId id) throws Exception {
-    final Table rawTable = bq.getTable(TableId.of(id.rawNamespace(), id.rawName()));
+    final Table rawTable = bq.getTable(TableId.of(id.getRawNamespace(), id.getRawName()));
     if (rawTable == null) {
       // Table doesn't exist. There are no unprocessed records, and no timestamp.
       return new InitialRawTableStatus(false, false, Optional.empty());
@@ -98,7 +100,7 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
             FROM ${raw_table}
             WHERE _airbyte_loaded_at IS NULL
             """))
-        .build()).iterateAll().iterator().next().get(0);
+        .build()).iterateAll().iterator().next().getFirst();
     // If this value is null, then there are no records with null loaded_at.
     // If it's not null, then we can return immediately - we've found some unprocessed records and their
     // timestamp.
@@ -112,7 +114,7 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
             SELECT MAX(_airbyte_extracted_at)
             FROM ${raw_table}
             """))
-        .build()).iterateAll().iterator().next().get(0);
+        .build()).iterateAll().iterator().next().getFirst();
     // We know (from the previous query) that all records have been processed by T+D already.
     // So we just need to get the timestamp of the most recent record.
     if (loadedRecordTimestamp.isNull()) {
@@ -192,10 +194,10 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
   }
 
   @Override
-  public List<DestinationInitialStatus<Impl>> gatherInitialState(List<StreamConfig> streamConfigs) throws Exception {
-    final List<DestinationInitialStatus<MinimumDestinationState.Impl>> initialStates = new ArrayList<>();
+  public List<DestinationInitialStatus<BigQueryDestinationState>> gatherInitialState(List<StreamConfig> streamConfigs) throws Exception {
+    final List<DestinationInitialStatus<BigQueryDestinationState>> initialStates = new ArrayList<>();
     for (final StreamConfig streamConfig : streamConfigs) {
-      final StreamId id = streamConfig.id();
+      final StreamId id = streamConfig.getId();
       final Optional<TableDefinition> finalTable = findExistingTable(id);
       final InitialRawTableStatus rawTableState = getInitialRawTableState(id);
       initialStates.add(new DestinationInitialStatus<>(
@@ -205,13 +207,13 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
           finalTable.isPresent() && !existingSchemaMatchesStreamConfig(streamConfig, finalTable.get()),
           finalTable.isEmpty() || isFinalTableEmpty(id),
           // Return a default state blob since we don't actually track state.
-          new MinimumDestinationState.Impl(false)));
+          new BigQueryDestinationState(false)));
     }
     return initialStates;
   }
 
   @Override
-  public void commitDestinationStates(Map<StreamId, MinimumDestinationState.Impl> destinationStates) throws Exception {
+  public void commitDestinationStates(Map<StreamId, ? extends BigQueryDestinationState> destinationStates) throws Exception {
     // Intentionally do nothing. Bigquery doesn't actually support destination states.
   }
 
@@ -226,9 +228,9 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
       tablePartitioningMatches = partitioningMatches(standardExistingTable);
     }
     LOGGER.info("Alter Table Report {} {} {}; Clustering {}; Partitioning {}",
-        alterTableReport.columnsToAdd(),
-        alterTableReport.columnsToRemove(),
-        alterTableReport.columnsToChangeType(),
+        alterTableReport.getColumnsToAdd(),
+        alterTableReport.getColumnsToRemove(),
+        alterTableReport.getColumnsToChangeType(),
         tableClusteringMatches,
         tablePartitioningMatches);
 
@@ -238,9 +240,9 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
   public AlterTableReport buildAlterTableReport(final StreamConfig stream, final TableDefinition existingTable) {
     final Set<String> pks = getPks(stream);
 
-    final Map<String, StandardSQLTypeName> streamSchema = stream.columns().entrySet().stream()
+    final Map<String, StandardSQLTypeName> streamSchema = stream.getColumns().entrySet().stream()
         .collect(toMap(
-            entry -> entry.getKey().name(),
+            entry -> entry.getKey().getName(),
             entry -> toDialectType(entry.getValue())));
 
     final Map<String, StandardSQLTypeName> existingSchema = existingTable.getSchema().getFields().stream()
@@ -317,7 +319,26 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
   }
 
   private static Set<String> getPks(final StreamConfig stream) {
-    return stream.primaryKey() != null ? stream.primaryKey().stream().map(ColumnId::name).collect(Collectors.toSet()) : Collections.emptySet();
+    return stream.getPrimaryKey() != null ? stream.getPrimaryKey().stream().map(ColumnId::getName).collect(Collectors.toSet())
+        : Collections.emptySet();
+  }
+
+  @Override
+  public void createNamespaces(@NotNull Set<String> schemas) {
+    schemas.forEach(this::createDataset);
+  }
+
+  private void createDataset(final String dataset) {
+    LOGGER.info("Creating dataset if not present {}", dataset);
+    try {
+      BigQueryUtils.getOrCreateDataset(bq, dataset, datasetLocation);
+    } catch (BigQueryException e) {
+      if (ConnectorExceptionUtil.HTTP_AUTHENTICATION_ERROR_CODES.contains(e.getCode())) {
+        throw new ConfigErrorException(e.getMessage(), e);
+      } else {
+        throw e;
+      }
+    }
   }
 
 }
